feat: add search with name feature
this commit adds the named search function, using the search input value as a query in the API URL

Co-authored-by: Guillermo Morales <guillermo.gazille@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/_documents.js"
+    "app/_documents.js",
+    "app/registry.js"
   ],
   "exclude": ["node_modules"]
 }
