feat: comic page
this commit adds a comic page for all comic data like Name Published,Writer, Image, etc.

Co-authored-by: Guillermo Morales <guillermo.gazille@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "app/_documents.js",
-    "app/registry.js"
+    "app/registry.js",
+    "pages/comic.tsx"
   ],
   "exclude": ["node_modules"]
 }
