--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "jest-enzyme": "^7.1.2",
