--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "13.5.0",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -22,5 +25,9 @@
     "react-icons": "^4.10.1",
     "styled-components": "^6.0.0-rc.1",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@testing-library/react": "^13.4.0",
+    "jsdom-global": "^3.0.2"
   }
 }
